--- a/app/views/alerts/show_in_progress.html.erb
+++ b/app/views/alerts/show_in_progress.html.erb
@@ -1,43 +1,59 @@
-<div class="direction_map"></div>
-
 <div id="lat" style="display: none;"><%= @alert.location.latitude %></div>
 <div id="lng" style="display: none;"><%= @alert.location.longitude %></div>
 <div id='current_lat' style="display: none;"><%= current_user.location.latitude %></div>
 <div id='current_lng' style="display: none;"><%= current_user.location.longitude %></div>
-
-<%= image_tag 'alert__progress_logo_center.png', size: '50', class: 'alert_logo' %>
-<%= image_tag @alert.creator.avatar_url, size: '60', class: 'avatar' %>
-<%= @alert.creator.full_name %>
-<%= @alert.time_diff %>
-<%= @alert.status.capitalize %>
-<%= image_tag 'location_icon.png', size: '22', class: 'location-icon' %>
-Description
-<%= @alert.description %>
-<%= @alert.receipt.mechanic.full_name%> has responded and is on their way
-
 <div id='lat_mech' style="display: none;"><%= @alert.receipt.location.latitude %></div>
 <div id='lng_mech' style="display: none;"><%= @alert.receipt.location.longitude %></div>
 
-  <% if @alert.creator == current_user %>
-    Cancel if your mechanic does not show or respond
-    <%= form_tag alert_path(@alert), method: 'patch' do %>
-    <input value="incomplete" type="hidden" name="alert[status]" id="alert_status">
-    <%= image_submit_tag 'cancel_icon.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
-    <% end %>
 
-    <%= form_tag alert_path(@alert), method: 'patch' do %>
-    <input value="complete" type="hidden" name="alert[status]" id="alert_status">
-    <%= image_submit_tag 'alert__complete_logo_center.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
-    <% end %>
+<section class='block' id='alert-in-progress-page'>
+	<div class="direction_map"></div>
+	<div class="centered">
+		<%= image_tag 'alert__progress_logo_center.png', size: '50', class: 'alert_logo' %>
+    <div class='row'>
+  		<%= image_tag @alert.creator.avatar_url, size: '60', class: 'avatar' %>
+      <div class='small-8 small-centered columns'>
+    		<h3><%= @alert.creator.full_name %></h3>
+      </div>
+      <div class='small-12 small-centered columns'>
+    		<p>Posted <%= @alert.time_diff %></p>
+    		<h6><%= @alert.status.capitalize %></h6>
+    		<%= image_tag 'location_icon.png', size: '22', class: 'location-icon' %>
+      </div>
+    </div>
+  </div>
+  <div class='response'>
+    <%= @alert.receipt.mechanic.full_name%> has responded and is on their way
 
-    Delete if you no longer need assistance
-    <%= link_to image_tag('trash_icon.png', size: '40', class: "trash-icon"), @alert, method: :delete, style: 'background-color: black;' %>
-  <% end %>
+    <% if @alert.creator == current_user %>
+      <p id='response-header'>Cancel if your mechanic does not show or respond</p>
+  		<p id='response-header-2'>Delete if you no longer need assistance</p>
+      <div class='small-10 small-centered columns'>
+        <h6>Description</h6>
+        <p id='desc-cont'><%= @alert.description %></p>
+      </div>
+      <%= form_tag alert_path(@alert), method: 'patch' do %>
+      <input value="incomplete" type="hidden" name="alert[status]" id="alert_status">
+      <%= image_submit_tag 'cancel_icon.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
+      <% end %>
 
-  <% if @alert.receipt.mechanic == current_user %>
-    Remember to cancel the alert if you can no longer assist
-    <%= form_tag alert_path(@alert), method: 'patch' do %>
-    <input value="incomplete" type="hidden" name="alert[status]" id="alert_status">
-    <%= image_submit_tag 'cancel_icon.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
+      <%= form_tag alert_path(@alert), method: 'patch' do %>
+      <input value="complete" type="hidden" name="alert[status]" id="alert_status">
+      <%= image_submit_tag 'alert__complete_logo_center.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
+      <% end %>
+
+      <%= link_to image_tag('trash_icon.png', size: '40', class: "trash-icon"), @alert, method: :delete, style: 'background-color: black;' %>
     <% end %>
-  <% end %>
+    <% if @alert.receipt.mechanic == current_user %>
+      <p id='response-header'>Remember to cancel the alert if you can no longer assist</p>
+      <div class='small-10 small-centered columns'>
+        <h6>Description</h6>
+        <p id='desc-cont'><%= @alert.description %></p>
+      </div>
+  		<%= form_tag alert_path(@alert), method: 'patch' do %>
+  		<input value="incomplete" type="hidden" name="alert[status]" id="alert_status">
+  		<%= image_submit_tag 'cancel_icon.png', width: '40', class: 'help-icon', style: 'background-color: black;' %>
+  		<% end %>
+		<% end %>
+	</div>
+</section>
