--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,22 @@
-<div>
-	<h1>Edit Your Profile</h1>
-	<%= form_for @user do |f| %>
-	  <p><%= f.text_field :username, placeholder: "Username" %></p>
-	  <p><%= f.password_field :password, placeholder: "Password" %></p>
-	  <p><%= f.text_field :first_name, placeholder: "First Name" %></p>
-	  <p><%= f.text_field :last_name, placeholder: "Last Name" %></p>
-	  <p><%= f.text_field :email, placeholder: "Email" %></p>
-	  <p><%= f.text_field :phone, placeholder: "Phone" %></p>
-	  <p><%= f.text_field :bio, placeholder: "Bio" %></p>
-	  <p><%= f.text_field :avatar_url, placeholder: "Avatar" %></p>
-	  <p><%= f.submit 'Update' %></p>
-	<% end %>
-</div>
+<section class='block' id='signup-page'>
+	 <div class="centered">
+		<div>
+			<div class='row'>
+      	<div class='small-12 columns'>
+        	<h3><%= image_tag "edit_icon.png", size: '30', class: 'logo' %> Edit your profile</h3>
+      	</div>
+    	</div>
+			<%= form_for @user do |f| %>
+			  <p><%= f.text_field :username, placeholder: "Username" %></p>
+			  <p><%= f.password_field :password, placeholder: "Password" %></p>
+			  <p><%= f.text_field :first_name, placeholder: "First Name" %></p>
+			  <p><%= f.text_field :last_name, placeholder: "Last Name" %></p>
+			  <p><%= f.text_field :email, placeholder: "Email" %></p>
+			  <p><%= f.text_field :phone, placeholder: "Phone" %></p>
+			  <p><%= f.text_field :bio, placeholder: "Bio" %></p>
+			  <p><%= f.text_field :avatar_url, placeholder: "Avatar" %></p>
+			  <p><%= f.submit 'Update' %></p>
+			<% end %>
+		</div>
+	</div>
+</section>
