--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -25,13 +25,15 @@
 }
 
 .direction_map {
-  height:500px;
+  margin-top: -1.5em;
+  height: 15em;
 }
 
 #create-alert-map {
   margin-top: -32em;
   height: 15em;
 }
+
 #alert-incomplete-page {
   .trash-icon {
     position: absolute;
@@ -72,6 +74,106 @@
 
     }
     p#response-header {
+    width: 0;
+    color: #faf9df;
+    top: 0.5em;
+    left: 8px;
+    letter-spacing: -0.25px;    }
+  }
+  .avatar {
+    border-style: solid;
+    border-color: #faf9df;
+    border-width: 3px;
+    border-radius: 100%;
+    position: relative;
+    bottom: 2.75em;
+    right: 7.5em;
+  }
+  .centered {
+    height: initial;
+  }
+  .alert_logo {
+    border-radius: 100%;
+    position: relative;
+    bottom: 1.5em;
+  }
+  .location-icon {
+    position: relative;
+    left: 6.5em;
+    bottom: 8em;  }
+  h3 {
+    color: #faf9df;
+    margin-top: -1.5em;
+    margin-bottom: 0;
+    text-align: left;
+    position: relative;
+    bottom: 2.375em;
+  }
+  h6 {
+    text-align: right;
+    position: relative;
+    color: #f04124;
+    bottom: 7.5em;
+    left: 0.5em;  }
+    p {
+      font-size: 80%;
+      position: relative;
+      text-align: left;
+      bottom: 4.5em;
+      left: 4em;
+      color: #00aac8;
+      width: 75%;
+      margin: 0;
+    }
+  background-color: #bdc2c6;
+}
+
+#alert-in-progress-page {
+  .trash-icon {
+    position: absolute;
+    right: 8.75em;
+    bottom: 0.5em;
+  }
+  .help-icon {
+    position: absolute;
+    right: 12.75em;
+    bottom: 0.5em;
+  }
+  .response {
+    p#desc-cont {
+      color: #bdc2c6;
+      bottom: 10px;
+      position: relative;
+      left: 0.6em;    }
+    h6 {
+      color: #00aac8;
+      opacity: 0.6;
+      width: 0;
+      top: 0em;    }
+    background-color: #00aac8;
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+    height: 12em;
+    .columns {
+      background-color: white;
+      top: 1em;
+      border-radius: 3px;
+      height: 6em;    }
+    p {
+      width: 0;
+      color: #faf9df;
+    }
+    p#response-title {
+
+    }
+    p#response-header {
+    width: 0;
+    color: #faf9df;
+    top: 0.5em;
+    left: 8px;
+    letter-spacing: -0.25px;    }
+    p#response-header-2 {
     width: 0;
     color: #faf9df;
     top: 0.5em;
