--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -26,7 +26,7 @@
 
 .direction_map {
   margin-top: -1.5em;
-  height: 15em;
+  height: 9em;
 }
 
 #create-alert-map {
@@ -156,10 +156,11 @@
     bottom: 0;
     height: 12em;
     .columns {
-      background-color: white;
-      top: 1em;
-      border-radius: 3px;
-      height: 6em;    }
+    background-color: white;
+    top: 5.75em;
+    border-radius: 3px;
+    height: 3em;
+    margin-top: -2.5em; }
     p {
       width: 0;
       color: #faf9df;
