Add background for user show

--- a/app/assets/stylesheets/user_show.css.scss
+++ b/app/assets/stylesheets/user_show.css.scss
@@ -7,3 +7,17 @@
   bottom: 5px;
   right: 5px;
 }
+
+#user-avatar{
+  border-style: solid;
+  border-color: #faf9df;
+  border-width: 3px;
+  border-radius: 100%;
+  position: absolute;
+  bottom: -20%;
+  left: 10px;
+}
+
+#user-show-page {
+  background-color: #ffffff;
+}
