Add avatar position

--- a/app/assets/stylesheets/user_show.css.scss
+++ b/app/assets/stylesheets/user_show.css.scss
@@ -21,3 +21,9 @@
 #user-show-page {
   background-color: #ffffff;
 }
+
+#username-user-show {
+  position: absolute;
+  bottom: -50%;
+  left: 4%;
+}
