--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,6 +1,11 @@
 <div id="user-profile-header">
 <div id='hero-image' class='hero-image'><%= image_tag 'bike_header.jpg'%></div>
+  <div id="avatar-logo">
     <%= image_tag @user.avatar_url, size: '100', id:"user-avatar" %>
+    <div id="username-user-show">
+      <h2><%= @user.full_name %></h2>
+    </div>
+  </div>
   <div id="user-show-edit-button">
     <% if authorized?(@user)%>
 
@@ -12,11 +17,8 @@
 <section class='block' id='user-show-page'>
   <div class='centered'>
 
-    <%= @user.full_name %>
-
-
     <% if @user.bio.empty? %>
-    <%= link_to 'Click Here To Edit', edit_user_path(@user) %>
+    <p><%= link_to 'Click Here To Edit', edit_user_path(@user) %></p>
     <% else %>
     <%= @user.bio %>
     <% end %>
