Position bio and center alert elements

--- a/app/assets/stylesheets/user_show.css.scss
+++ b/app/assets/stylesheets/user_show.css.scss
@@ -20,10 +20,17 @@
 
 #user-show-page {
   background-color: #ffffff;
+  padding-top:25%;
+  padding-left: 5%;
 }
 
 #username-user-show {
   position: absolute;
   bottom: -50%;
   left: 4%;
+}
+
+bio{
+  position: relative;
+  padding-top:20%;
 }
