--- a/app/views/alerts/show_in_progress.html.erb
+++ b/app/views/alerts/show_in_progress.html.erb
@@ -23,15 +23,15 @@
     </div>
   </div>
   <div class='response'>
+    <% if @alert.creator == current_user %>
     <div class='small-10 small-centered columns'>
-		<%= image_tag @alert.receipt.mechanic.avatar_url, size: '40', class: 'avatar', id: 'on-way-img' %>
+    <%= image_tag @alert.receipt.mechanic.avatar_url, size: '40', class: 'avatar', id: 'on-way-img' %>
       <h6 id='on-way-name'><%= @alert.receipt.mechanic.full_name%></h6>
       <p id='on-way'>has responded and is on their way</p>
     </div>
 
-    <% if @alert.creator == current_user %>
       <p id='response-header'>Cancel if your mechanic does not show or respond</p>
-  		<p id='response-header-2'>Delete if you no longer need assistance</p>
+      <p id='response-header-2'>Delete if you no longer need assistance</p>
       <div class='small-10 small-centered columns'>
         <h6>Description</h6>
         <p id='desc-cont'><%= @alert.description %></p>
@@ -49,15 +49,20 @@
       <%= link_to image_tag('trash_icon.png', size: '30', class: "trash-icon"), @alert, method: :delete, class: 'help-icon', id: 'trash' %>
     <% end %>
     <% if @alert.receipt.mechanic == current_user %>
-      <p id='response-header'>Remember to cancel the alert if you can no longer assist</p>
+      <p id='response-header-mech'>Remember to cancel the alert if you can no longer assist</p>
+      <div class='small-10 small-centered columns' id='mech-div'>
+      <%= image_tag @alert.receipt.mechanic.avatar_url, size: '40', class: 'avatar', id: 'on-way-img' %>
+        <h6 id='on-way-name'><%= @alert.receipt.mechanic.full_name%></h6>
+        <p id='on-way'>has responded and is on their way</p>
+      </div>
       <div class='small-10 small-centered columns'>
         <h6>Description</h6>
-        <p id='desc-cont'><%= @alert.description %></p>
+        <p id='desc-cont-mech'><%= @alert.description %></p>
       </div>
-  		<%= form_tag alert_path(@alert), method: 'patch' do %>
-  		<input value="incomplete" type="hidden" name="alert[status]" id="alert_status">
-  		<%= image_submit_tag 'cancel_icon.png', width: '30', class: 'help-icon', style: 'background-color: black;' %>
-  		<% end %>
-		<% end %>
-	</div>
+      <%= form_tag alert_path(@alert), method: 'patch', id: 'mech-cancel' do %>
+      <input value="incomplete" type="hidden" name="alert[status]" id="alert_status">
+      <%= image_submit_tag 'cancel_icon.png', width: '30', class: 'help-icon' %>
+      <% end %>
+    <% end %>
+  </div>
 </section>
