--- a/app/views/alerts/show_complete.html.erb
+++ b/app/views/alerts/show_complete.html.erb
@@ -1,14 +1,31 @@
-<div class="location_map"></div>
 <div id="lat" style="display: none;"><%= @alert.location.latitude %></div>
 <div id="lng" style="display: none;"><%= @alert.location.longitude %></div>
 
-<h1>Alert status: <%= @alert.status %> </h1>
-<% if @alert.creator == current_user%>
-  <h3><%= @alert.receipt.mechanic.first_name%> was your mechanic</h3>
-<% elsif @alert.receipt.mechanic == current_user %>
-  <h3>Thanks for helping <%= @alert.creator.first_name %></h3>
-<% else %>
-  <h3>Created by <%= @alert.creator.first_name%> </h3>
-<%end%>
-<h4>This alert was posted <%=@alert.time_diff%> from <%=@alert.location.latitude%>, <%=@alert.location.longitude%></h4>
-<p><%=@alert.description%></p>
+
+<section class='block' id='complete-page'>
+  <div class="location_map"></div>
+    <div class='centered'>
+      <%= image_tag 'alert__complete_logo_center.png', size: '50', class: 'alert_logo' %>
+      <div class='row'>
+        <%= image_tag @alert.creator.avatar_url, size: '60', class: 'avatar' %>
+        <div class='small-8 small-centered columns'>
+          <h3><%= @alert.creator.full_name %></h3>
+        </div>
+        <div class='small-12 small-centered columns'>
+          <p>Posted <%= @alert.time_diff %></p>
+          <h6><%= @alert.status.capitalize %></h6>
+          <%= image_tag 'location_icon.png', size: '22', class: 'location-icon' %>
+        </div>
+      </div>
+    </div>
+    <div class='response'>
+      <div class='small-10 small-centered columns'>
+        <h6>Description</h6>
+        <p id='desc-cont'><%= @alert.description %></p>
+      </div>
+      <div class='small-10 small-centered columns'>
+        <%= image_tag @alert.receipt.mechanic.avatar_url, size: '40', class: 'avatar', id: 'on-way-img' %>
+        <h6 id='on-way-name'><%= @alert.receipt.mechanic.full_name %></h6>
+      </div>
+    </div>
+</section>
