Resize bio text

--- a/app/assets/stylesheets/user_show.css.scss
+++ b/app/assets/stylesheets/user_show.css.scss
@@ -33,4 +33,18 @@
 bio{
   position: relative;
   padding-top:20%;
+
+
+
 }
+  #bio-text{
+    font-size: 60%;
+    color: #bdc2c6;
+  }
+
+  #bio-image{
+    position: relative;
+    float: left;
+    height: 40px;
+    padding-right: 15px;
+  }
