--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -4,13 +4,15 @@
     <div class='centered'>
       <div class='profile-layer'>
         <div class='row'>
-          <div class='small-5 small-centered columns'>
-            <%= image_tag current_user.avatar_url, size: '70'%>
-            <h3><%= current_user.full_name %></h3>
-          </div>
-          <div class='small-5 small-centered columns'>
-            <h6><%= current_user.email %></h6>
-          </div>
+          <a href='/users/<%= current_user.id %>'>
+            <div class='small-5 small-centered columns'>
+              <%= image_tag current_user.avatar_url, size: '70'%>
+              <h3><%= current_user.full_name %></h3>
+            </div>
+            <div class='small-5 small-centered columns'>
+              <h6><%= current_user.email %></h6>
+            </div>
+          </a>
         </div>
       </div>
       <div class='row'>
