Adjust vertical alignment of alert divs

--- a/app/assets/stylesheets/user_show.css.scss
+++ b/app/assets/stylesheets/user_show.css.scss
@@ -48,3 +48,37 @@ bio{
     height: 40px;
     padding-right: 15px;
   }
+
+  #alert-avatar{
+  border-style: solid;
+  border-color: #ffffff;
+  border-width: 3px;
+  border-radius: 100%;
+  left: 10px;
+  }
+  #alert-user{
+
+    font-size: 80%;
+    color: #bdc2c6;
+
+  }
+
+#alert-item{
+
+}
+
+#user-alert-headers{
+  color: #bdc2c6;
+}
+
+#1 {
+  color:#bdc2c6;
+}
+
+#2 {
+  background-color:red;
+}
+
+#3 {
+  background-color:blue;
+}
