Fix incomplete positioning

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -165,7 +165,7 @@
     background-color: #00aac8;
     position: absolute;
     width: 100%;
-    bottom: 0;
+    bottom: -7em;
     height: 12em;
     .columns {
       background-color: white;
