--- a/app/assets/stylesheets/user_show.css.scss
+++ b/app/assets/stylesheets/user_show.css.scss
@@ -9,9 +9,6 @@
 }
 
 #user-avatar{
-  border-style: solid;
-  border-color: #faf9df;
-  border-width: 3px;
   border-radius: 100%;
   position: absolute;
   bottom: -20%;
@@ -55,30 +52,52 @@ bio{
   border-width: 3px;
   border-radius: 100%;
   left: 10px;
+  vertical-align: text-top;
   }
-  #alert-user{
 
+  #alert-icon{
+  left: 10px;
+  right: 10px;
+  vertical-align: text-top;
+  }
+
+  #alert-user{
     font-size: 80%;
     color: #bdc2c6;
-
   }
 
-#alert-item{
-
-}
 
 #user-alert-headers{
   color: #bdc2c6;
 }
 
-#1 {
-  color:#bdc2c6;
+
+#receipt-time{
+  float: right;
+  font-size: 80%;
+  color: #bdc2c6;
+  padding-right:4%;
+  padding-top:1.5%;
 }
 
-#2 {
-  background-color:red;
+#created-alert-status{
+  float: right;
+  font-size: 90%;
+  color: #e64c3b;
+  padding-right:4%;
 }
 
-#3 {
-  background-color:blue;
+#created-alert-time{
+  font-size: 80%;
+  color: #e64c3b;
+}
+
+hr {
+  margin-right:4%;
+}
+
+#created-alerts{
+  font-size: 80%;
+  padding-top:5%;
+  color: #bdc2c6;
 }
