Change forms from yellowish color to white

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -97,7 +97,7 @@ $font-family-sans-serif: "Lato", Helvetica, Roboto, Arial, sans-serif;
 // $font-weight-normal: normal;
 // $font-weight-bold: bold;
 
-$white       : #faf9df;
+$white       : white;
 // $ghost       : #FAFAFA;
 // $snow        : #F9F9F9;
 // $vapor       : #F6F6F6;
