Fix width for buttons on splash page

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -480,6 +480,7 @@ section#create-alert-page {
     text-align: center;
     .hero-button {
       opacity: .775;
+      width:10em;
     }
     .button-path {
       padding-bottom: 3em;
