--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -17,10 +17,10 @@
       </div>
       <div class='row'>
         <div class='small-centered columns button-path'>
-          <%= link_to "I need assistance", new_alert_path, class: 'button small expant radius hero-button alert' %>
+          <%= link_to "Need assistance", new_alert_path, class: 'button small expant radius hero-button alert' %>
         </div>
         <div class='small-centered columns'>
-          <%= link_to "I can lend a hand", alerts_path, class: 'button small expant radius hero-button success' %>
+          <%= link_to "Lend a hand", alerts_path, class: 'button small expant radius hero-button success' %>
         </div>
       </div>
     </div>
