--- a/app/views/user_mailer/welcome_email.text.erb
+++ b/app/views/user_mailer/welcome_email.text.erb
@@ -1,9 +1,6 @@
-Welcome to TripleB.com, <%= @user.first_name %>
+Welcome to Tripl_B.com, <%= @user.first_name %>
 ===============================================
- 
-You have successfully signed up to TripleB.com,
-your username is: <%= @user.email %>.
- 
+
+Your username is: <%= @user.email %>.
+
 To login to the site, just follow this link: <%= @url %>.
- 
-Thanks for joining and have a great day!
