--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -1,3 +1,6 @@
+html {
+  background-color: #bdc2c6;
+}
 #complete-page {
     #on-way-name {
     position: relative;
@@ -386,7 +389,7 @@
     left: 8em;
   }
   h2 {
-    color: #faf9df;
+    color: white;
     margin-top: -1.5em;
     margin-bottom: 0;
   }
@@ -412,7 +415,7 @@
       opacity: 0.7;
     }
     .columns {
-    background-color: #faf9df;
+    background-color: white;
     border-radius: 0.25em;
     margin-top: 1em;
       .avatar {
