Add padding to div styles for text blocks

--- a/app/assets/stylesheets/new_alerts.css.scss
+++ b/app/assets/stylesheets/new_alerts.css.scss
@@ -31,3 +31,15 @@ section#create-alert-page {
   height: 20em;
   bottom: -12em;
 }
+
+#new-instructions{
+  padding-top:1em;
+}
+
+#new-form{
+  padding-top:.5em;
+}
+
+#new-button{
+  padding-top:1em;
+}
