--- a/app/views/alerts/new.html.erb
+++ b/app/views/alerts/new.html.erb
@@ -1,24 +1,29 @@
 <section class='block' id='create-alert-page'>
   <div id="create-alert-map" class="user_position_map"></div>
   <div class='centered'>
-  <div id='current_user_lat' style="display: none;"><%= current_user.location.latitude %></div>
-  <div id='current_user_lng' style="display: none;"><%= current_user.location.longitude %></div>
-  <%= image_tag current_user.avatar_url, size: '60', class: 'avatar'%>
+    <div id='current_user_lat' style="display: none;"><%= current_user.location.latitude %></div>
+    <div id='current_user_lng' style="display: none;"><%= current_user.location.longitude %></div>
+    <%= image_tag current_user.avatar_url, size: '60', class: 'avatar'%>
 
     <%= form_tag alerts_path(@alert), method: 'post', id:"alert_form" do %>
-      <div class='row'>
-        <div class='small-12 small-centered columns'>
+    <div class='row'>
+      <div class='small-12 small-centered columns'>
+        <div id="new-instructions">
           <p>Provide a description to a mechanic and be as</p><p>specific as possible. You'll recieve a text from</p><p>your mechanic when they're on their way.</p>
         </div>
       </div>
-      <div class='row'>
-        <div class='small-10 small-centered columns'>
-          <%= text_area_tag "alert[description]", '', placeholder: 'Ex:"Popped a tube, need a size X replacement.', rows: '3' %>
-          <input type='hidden' name="location[latitude]" id="latitude" value=""/>
-          <input type='hidden' name="location[longitude]" id="longitude" value=""/>
-          <%= image_submit_tag 'new_alert_circle_logo.png', height: '50', class: 'new_alert_logo' %>
-        </div>
+    </div>
+
+    <div id="new-form">
+    <div class='row'>
+      <div class='small-12 small-centered columns'>
+        <%= text_area_tag "alert[description]", '', placeholder: 'Ex:"Popped a tube, need a size X replacement.', rows: '3, ' %>
+        <input type='hidden' name="location[latitude]" id="latitude" value=""/>
+        <input type='hidden' name="location[longitude]" id="longitude" value=""/>
+    </div>
+        <%= image_submit_tag 'new_alert_circle_logo.png', height: '50', class: 'new_alert_logo', id:"new-button" %>
       </div>
+  </div>
     <% end %>
   </div>
 </section>
