Add letter spacing for response header on incomplete show

--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -181,10 +181,10 @@ html {
     }
     p#response-header {
     width: 0;
-    color: #faf9df;
+    color: white;
     top: 0.5em;
-    left: 8px;
-    letter-spacing: -0.25px;    }
+    left: 15px;
+    letter-spacing: -0.5px; }
   }
   .avatar {
     border-style: solid;
