Change icons so they're filled in with grey instead of transparent

--- a/app/views/alerts/show_complete.html.erb
+++ b/app/views/alerts/show_complete.html.erb
@@ -5,7 +5,7 @@
 <section class='block' id='complete-page'>
   <div class="location_map"></div>
     <div class='centered'>
-      <%= image_tag 'alert__complete_logo_center.png', size: '50', class: 'alert_logo' %>
+      <%= image_tag 'icon_alert_complete.png', size: '50', class: 'alert_logo' %>
       <div class='row'>
         <%= image_tag @alert.creator.avatar_url, size: '60', class: 'avatar' %>
         <div class='small-8 small-centered columns'>
