--- a/app/views/alerts/show_in_progress.html.erb
+++ b/app/views/alerts/show_in_progress.html.erb
@@ -9,7 +9,7 @@
 <section class='block' id='alert-in-progress-page'>
 	<div class="direction_map"></div>
 	<div class="centered">
-		<%= image_tag 'alert__progress_logo_center.png', size: '50', class: 'alert_logo' %>
+		<%= image_tag 'icon_hourglass_alert.png', size: '50', class: 'alert_logo' %>
     <div class='row'>
       <%= image_tag @alert.creator.avatar_url, size: '60', class: 'avatar' %>
       <div class='small-8 small-centered columns'>
