--- a/app/views/alerts/show_incomplete.html.erb
+++ b/app/views/alerts/show_incomplete.html.erb
@@ -6,7 +6,7 @@
 <section class='block' id='alert-incomplete-page'>
   <div class="location_map"></div>
     <div class="centered">
-      <%= image_tag 'alert_logo_center.png', size: '50', class: 'alert_logo'%>
+      <%= image_tag 'icon_inprogress_alert_fix.png', size: '50', class: 'alert_logo'%>
       <div class='row'>
         <%= image_tag @alert.creator.avatar_url, size: '60', class: 'avatar' %>
         <div class='small-8 small-centered columns'>
