Add logo to nav bar

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -2,7 +2,7 @@
   <nav class="top-bar" data-topbar role="navigation" data-options="sticky_on: large">
     <ul class="title-area">
       <li class="name">
-        <h1><%= link_to "Tripl_B", :root %></h1>
+        <h1><%= link_to image_tag("bike_favicon_blue.png", size: '60'), :root %></h1>
       </li>
       <li class="has-form">
         <li class="toggle-topbar menu-icon"><a href="#"><span></span></a></li>
