--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,11 +13,11 @@
     <section class="top-bar-section">
       <ul class="right">
       <% if signed_in? %>
-        <li class="active"><%= link_to current_user.username, user_path(id: current_user.id) %></li>
-        <li class="active"><%= link_to "Logout", session_path(id: current_user.id), method: :delete %></li>
+        <li><%= link_to current_user.username, user_path(id: current_user.id) %></li>
+        <li><%= link_to "Logout", session_path(id: current_user.id), method: :delete %></li>
       <% else %>
-        <li class="active"><%= link_to "Login", login_path %></li>
-        <li class="active"><%= link_to "Sign up", signup_path %></li>
+        <li><%= link_to "Login", login_path %></li>
+        <li><%= link_to "Sign up", signup_path %></li>
       <% end %>
     </ul>
 
