--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -16,8 +16,8 @@
         <li><%= link_to current_user.username, user_path(id: current_user.id) %></li>
         <li><%= link_to "Logout", session_path(id: current_user.id), method: :delete %></li>
       <% else %>
-        <li><%= link_to "Login", login_path %></li>
         <li><%= link_to "Sign up", signup_path %></li>
+        <li><%= link_to "Sign in", login_path %></li>
       <% end %>
     </ul>
 
