--- a/app/views/welcome/_assistance.html.erb
+++ b/app/views/welcome/_assistance.html.erb
@@ -1,4 +1,4 @@
-<div id="user_id" style="display: none;"><%= current_user.id %></div>
+<!-- <div id="user_id" style="display: none;"><%= current_user.id %></div> -->
 <section id='homepage-hero-signed-in' class='block-splash'>
   <div class='centered'>
     <div class='row'>
