--- a/app/views/welcome/_home.html.erb
+++ b/app/views/welcome/_home.html.erb
@@ -13,3 +13,9 @@
     </div>
   </div>
 </section>
+<div class="row">
+  <div class="large-4 columns"></div>
+  <div class="large-4 columns"></div>
+  <div class="large-4 columns"></div>
+</div>
+    
