change topbar dropdown color to white

--- a/app/views/welcome/_home.html.erb
+++ b/app/views/welcome/_home.html.erb
@@ -1,27 +1,42 @@
 <section id="homepage-hero">
-  <div class='small-10 medium-6 large-4 columns' style="float:right">
+  <div id="formput">
     <%= form_for @user do |f| %>
-      <div class="row">
-        <div class='small-12 columns'>
+      <!-- <div class="row"> -->
+        <!-- <div class='small-12 columns'> -->
           <div id='sign-up-form'>
+            <span>
+              <%= f.text_field :first_name, placeholder: "First Name" %>
+              <%= f.text_field :last_name, placeholder: "Last Name" %>
+            </span>
             <%= f.text_field :email, placeholder: "Email" %>
-            <%= f.text_field :first_name, placeholder: "Full Name" %>
             <%= f.text_field :phone, placeholder: "Phone Number" %>
             <%= f.password_field :password, placeholder: "Password" %>
             <input type='hidden' name="location[latitude]" id="latitude" value=""/>
             <input type='hidden' name="location[longitude]" id="longitude" value=""/>
             <%= f.submit 'Signup', class: 'button small expand radius' %>
           </div>
-        </div>
-      </div>
+        <!-- </div> -->
+      <!-- </div> -->
     <% end %>
   </div>
 </section>
-<section style="text-align: center;">
-  <h3>How it Works</h3>
+<section style="text-align: center; margin: 75px auto 55px auto;">
+  <!-- <h3>How it Works</h3> -->
   <div class="row" id="tester">
-    <div class="large-4 columns">Hi</div>
-    <div class="large-4 columns">Hi</div>
-    <div class="large-4 columns">Hi</div>
+    <div class="medium-4 columns">
+      <i class="fa fa-warning fa-5x"></i>
+      <h3>Have an issue?</h3>
+      <p>Is it a flat tire or maybe it's something else? Easily create an alert detailing the issue with your bicycle.</p>
+    </div>
+    <div class="medium-4 columns">
+      <i class="fa fa-gears fa-5x" style="color:#00aac8;"></i>
+      <h3>Help is on the way!</h3>
+      <p>A detailed text message will be sent to your phone confirming a mechanic is on the way to assist you.</p>
+    </div>
+    <div class="medium-4 columns">
+      <i class="fa fa-bicycle fa-5x" style="color:#00aac8;"></i>
+      <h3>Ride with confidence</h3>
+      <p>Quickly get back on the road after the repairs are made.</p>
+    </div>
   </div>
 </section>
