--- a/app/assets/stylesheets/app.css.scss
+++ b/app/assets/stylesheets/app.css.scss
@@ -4,6 +4,8 @@ html, body {
   height: 100%;
   overflow: auto;
 }
+
+
 #complete-page {
     #on-way-name {
     position: relative;
@@ -449,40 +451,51 @@ html, body {
     background: url(asset-path('bwbike.jpg')) repeat scroll center;
     background-size: cover;
     background-repeat: no-repeat;
-    /*height: 100%;*/
+    height: 100%;
     padding: 100px 20px 0;
     position: relative;
     text-align: center;
     .hero-button {
-      opacity: .775;
+      /*opacity: .775;*/
       width:10em;
       margin-bottom: 0px;
       margin-top: 15px;
       top: -2em;
+    }
+    .reverse-hero-button {
+      /*opacity: .775;*/
+      width:10em;
+      margin-bottom: 0px;
+      margin-top: 15px;
+      top: -2em;
+      background-color: white;
+      color: $primary-color;
+      border: solid 2.5px $primary-color;
     }
     .button-path {
       padding-bottom: 3em;
     }
 }
 #homepage-hero {
-    background: url(asset-path('Flat-Tire-2.jpg')) repeat scroll 0 center;
+    background: url(asset-path('biking_in_city_2.jpg')) repeat scroll 0 center;
     background-size: cover;
     background-repeat: no-repeat;
-    min-height: 550px;
-    height: 75%;
+    /*min-height: 700px;*/
+    height: 100%;
     /*width: 100%;*/
+    /*height: auto;*/
     padding: 100px 20px 0;
-    position: relative;
+    /*position: relative;*/
     text-align: center;
     .logo {
       margin-top: -3em;
       margin-bottom: 3em;
     }
 }
-
+/*
 .hero-button {
   opacity: .7;
-}
+}*/
 
 .block-splash {
   text-align: center;
@@ -517,13 +530,10 @@ html, body {
   height: 400px;
 }
 #footer {
-  a {
-    color: #faf9df;
-  }
   position: relative;
-  height: 3em;
-  bottom: 3em;
-  background-color: #252419;
+  /*height: 3em;*/
+  bottom: 0;
+  /*background-color: #252419;*/
 }
 
 #password-div {
@@ -566,8 +576,56 @@ html, body {
 
 }
 #sign-up-form {
-  padding-bottom: -0.5em;
+  /*padding-bottom: -0.5em;*/
+  width: 320px;
+  display: inline-block;
+  /*margin: 0px auto;*/
+  float: right;
 }
 input {
   border-radius: 5px !important;
+}
+#header {
+  background-color: white;
+  -webkit-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
+  -moz-box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
+  box-shadow: 0px 3px 8px 0px rgba(0,0,0,0.25);
+  z-index: 1;
+  position: relative;
+}
+
+.top-bar {
+  background-color: white !important;
+}
+.top-bar-section ul li a {
+  color: black !important;
+  background-color: white !important;
+}
+.fa-warning {
+  color: $primary-color;
+}
+
+span #user_first_name {
+  float: left;
+  width: 49%;
+  margin-right: 1%;
+}
+
+span #user_last_name {
+  float: right;
+  width: 49%;
+  margin-left: 1%;
+}
+
+@media only screen and (max-width: 475px) {
+  /*#formput {
+    display: inline-block;
+    margin: 0 auto;
+  }*/
+  #sign-up-form {
+    /*width: 200px;*/
+    float: none;
+    display: inline-block;
+    margin: 0 auto;
+  }
 }
