--- a/app/views/welcome/_assistance.html.erb
+++ b/app/views/welcome/_assistance.html.erb
@@ -3,10 +3,10 @@
   <div class='centered'>
     <div class='row'>
       <div class='small-centered columns button-path'>
-        <%= link_to "Need assistance", new_alert_path, class: 'button small expant radius hero-button alert' %>
+        <%= link_to "Need assistance", new_alert_path, class: 'button small expant radius hero-button' %>
       </div>
       <div class='small-centered columns'>
-        <%= link_to "Lend a hand", alerts_path, class: 'button small expant radius hero-button success' %>
+        <%= link_to "Lend a hand", alerts_path, class: 'button small expant radius reverse-hero-button' %>
       </div>
     </div>
   </div>
